# llama.cpp-model-select

./: .gitignore  LICENSE  README.md  models.json
common/: arg.cpp  common.h  preset.cpp  preset.h
data/: .gitignore
docs/: local-llm-autopilot.md
scripts/: ds4-style-router-bench.py
tools/server/: CMakeLists.txt  README.md  caliber-plan.cpp  caliber-plan.h  caliber-scoring.cpp  caliber-scoring.h  ds4-eval-cases.json  ds4-output-guard.h  least-cost-router.cpp  least-cost-router.h  local-quality-packs.json  model-operations.cpp  model-operations.h  model-registry.cpp  model-registry.h  quality-evidence.cpp  quality-evidence.h  server-caliber-advisor.cpp  server-caliber-advisor.h  server-common.cpp  server-ds4.cpp  server-ds4.h  server-fit-advisor.cpp  server-fit-advisor.h  server-http.cpp  server-models.cpp  server-models.h  server-persistence.cpp  server-persistence.h  server.cpp  streaming-profiler.cpp  streaming-profiler.h
tools/server/tests/: test-caliber-plan.cpp  test-caliber-scoring.cpp  test-ds4-output-guard.cpp  test-least-cost-router.cpp  test-model-operations.cpp  test-model-registry.cpp  test-quality-evidence.cpp  test-server-persistence.cpp  test-streaming-profiler.cpp
tools/ui/: vite.config.ts
tools/ui/src/lib/components/app/ds4/: Ds4SuitePage.svelte  index.ts
tools/ui/src/lib/components/app/icons/: CaliberAdvisorIcon.svelte
tools/ui/src/lib/components/app/navigation/SidebarNavigation/: SidebarNavigation.svelte
tools/ui/src/lib/components/app/settings/SettingsChat/: SettingsChatImportExportTab.svelte
tools/ui/src/lib/constants/: routes.ts  ui.ts
tools/ui/src/lib/services/: archive.service.ts  caliber-advisor.service.ts  ds4.service.ts  fit-advisor.service.ts  router.service.ts
tools/ui/src/lib/stores/: models.svelte.ts
tools/ui/src/lib/utils/: model-display.ts
tools/ui/src/routes/caliber-advisor/: +page.svelte
tools/ui/src/routes/ds4-bench/: +page.svelte
tools/ui/src/routes/ds4-eval/: +page.svelte
tools/ui/src/routes/fit-advisor/: +page.svelte
tools/ui/static/reports/: .gitignore  ds4-eval-2841346-0.json  ds4-eval-2953008-1.json  ds4-eval-60686824-0.json
tools/ui/tests/e2e/: autopilot.e2e.ts
tools/ui/tests/unit/: model-display.test.ts
